--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -26,12 +26,28 @@
         <label class="labelCompact">V.Model</label>
         <span>{{vehicleMainDetials.details.mfgDate}}</span>
     </div>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact">Paper Validity</label>
+        <span>{{vehicleDetails.vPaperValidity}}</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px;">
+        <label class="labelCompact" title="Tracking Device">Track Device</label>
+        <span>{{vehicleDetails.vTrackingDevice}}</span>
+    </div>
+    <div class="fieldContainer relative left" style="width:180px;">
+        <label class="labelCompact">Carrier</label>
+        <span>{{vehicleDetails.vCarrier}}</span>
+    </div>
+    <div class="fieldContainer relative right" style="width:180px;">
+        <label class="labelCompact">Music System</label>
+        <span>{{vehicleDetails.vMusicPlayer}}</span>
+    </div>
     <div class="fieldContainer relative left">
         <label class="labelCompact">V.Condition</label>
         <span>{{vehicleDetails.vConditionText}}</span>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
-        <label class="labelCompact">Status</label>
+        <label class="labelCompact">Veh. Status</label>
         <span>{{vehicleDetails.vStatusText}}</span>
     </div>
     <p class="clear"/>
