--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -37,11 +37,11 @@
     <div class="mainButtonContainer">
         <div>
             <!-- <button class="btnCompact btn-success" data-ng-click="fnVehicleChangeLocation()">Landmark Change</button>  --><!--  data-ng-click="fnOpenCancelBooking()" data-ng-show="bShowCancel" -->
-            <button class="btnCompact btn-success" data-ng-click="fnVehicleBreakStart()">Break Start</button>
+            <!-- <button class="btnCompact btn-success" data-ng-click="fnVehicleBreakStart()">Break Start</button>
             <button class="btnCompact btn-success" data-ng-click="fnVehicleBreakStop()">Break Stop</button>
-            <button class="btnCompact btn-success" data-ng-click="fnVehicleLogout()">Logout</button>
-            <button class="btnCompact btn-success">Accepted</button>
-            <button class="btnCompact btn-danger">Rejected</button>
+            <button class="btnCompact btn-success" data-ng-click="fnVehicleLogout()">Logout</button> -->
+            <button class="btnCompact btn-success" data-ng-click="fnVehicleConfirm()">Accepted</button>
+            <button class="btnCompact btn-danger" data-ng-click="fnVehicleReject()">Rejected</button>
         </div>
         <p class="clear"/>
     </div>
