--- a/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
+++ b/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
@@ -1,6 +1,6 @@
-<fieldset class="" style="width:382px;margin-left: 6px;" ng-controller = "bookingStatisticsController">
+<fieldset class="" style="width:362px;margin-left: 6px;" ng-controller="bookingStatisticsController">
     <legend class="searchbox-border">Statistics</legend>
-    <div style="height:160px;" id="customerBookingGridID" class = "bookingHistoryGrid">
+    <div style="height:160px;" id="customerBookingGridID" class="bookingHistoryGrid">
     	<div class="gridStyle" ng-grid="gridStatisticsData" style="height:100%;margin:0px;background-color:transparent;"></div>
     </div>
     <div class="mainButtonContainer" style="margin-top:4px;text-align:center;">    	
@@ -11,9 +11,9 @@
                 Select Hours<span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="javascript:void(0);" data-ng-click="fnChangeVehiclePhone()">1 Hour</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">2 Hours</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">3 Hours</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="">1 Hour</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="">2 Hours</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="">3 Hours</a></li>
                 </ul>
             </div>
 	    </div>
