--- a/sigmaCabs/app/views/dispatches/changeVehicle.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicle.html
@@ -17,21 +17,25 @@
         <div class="modal-body" > 
             <fieldset class="left">
                 <legend class="searchbox-border">Change Vehicle</legend>
-                <div class="fieldContainer  relative">
-                    <label class="labelCompact">Complaint By</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">Current Vehicle</label>
+                    <span>{{vehicleDetails.vehicleMainDetials.details.vehicleCode}}</span> <!--  current Vehicle code -->
                 </div>
-                <div class="fieldContainer  relative">
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">New Vehicle</label>
+                    <span>{{vChange.newVehicleCode}}</span> <!-- new Vehicle code -->
+                </div>
+                <div class="fieldContainer relative">
                     <label class="labelCompact">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChange.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Priority</label>
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChange.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                 </div>
-                <div class="fieldContainer  relative" style="height:75px;">
+                <div class="fieldContainer relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
-                    <textarea data-ng-model="comments" class="cancelBookingComment"></textarea>
+                    <textarea data-ng-model="vChange.comments" class=""></textarea>
                 </div>
             </fieldset>
             <p class="clear"/>
