--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -14,7 +14,7 @@
         <div class="fieldContainer relative clearBoth">
             <label class="labelCompact">Vehicle Ph.</label>
             <input type="text" ng-model="vehicleMainDetials.details.registeredMobile" class="left validate[required,maxSize[128]] textFieldCompact" readonly phone />
-            <input name="" checked class="left smsCheckbox" type="checkbox" value="">
+            <input name="" checked class="left smsCheckbox" type="checkbox" checked disabled>
         </div>
         <div class="fieldContainer clearBoth relative">
             <label class="labelCompact">Owner No.</label>
@@ -41,6 +41,13 @@
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehiclePhone()">Change Primary No.</a></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">Change Location.</a></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">Vehcile Status Change</a></li>
+                    <li class="divider"></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+                    <li class="divider"></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStart()">Break Start</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStop()">Break Stop</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleLogout()">Logout</a></li>
+                    <li class="divider"></li>
                     <li><a href="javascript:void(0);" data-ng-click="">Road Side Booking</a></li>
                     <li class="divider"></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakdown()">Vehicle Breakdown</a></li>
