--- a/sigmaCabs/app/views/dispatches/vehicleBookingTariff.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingTariff.html
@@ -17,21 +17,29 @@
         <div class="modal-body" > 
             <fieldset class="left">
                 <legend class="searchbox-border">Change Tariff</legend>
-                <div class="fieldContainer  relative">
-                    <label class="labelCompact">Complaint By</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
-                </div>
-                <div class="fieldContainer  relative">
-                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">&nbsp;</label>
+                    <a href="javascript:void(0);" ng-click="checkTariff()">Select Tariff</a>
                 </div>
                 <div class="fieldContainer relative">
-                    <label class="labelCompact">Priority</label>
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                    <label class="labelCompact">New Tariff</label>
+                    <span>{{vChangeTariff.newTariff}}</span>
                 </div>
-                <div class="fieldContainer  relative" style="height:75px;">
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">Category By</label>
+                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeTariff.categoryId" data-ng-options="obj.id as obj.categoryName for obj in vehicleCategoryTypes"></select>
+                </div>
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeTariff.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleComplaintReasonTypes"></select>
+                </div>
+                <!-- <div class="fieldContainer relative">
+                    <label class="labelCompact">Priority</label>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeTariff.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
+                </div> -->
+                <div class="fieldContainer relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
-                    <textarea data-ng-model="comments" class="cancelBookingComment"></textarea>
+                    <textarea data-ng-model="vChangeTariff.comments" class=""></textarea>
                 </div>
             </fieldset>
             <p class="clear"/>
