Did scope destroy bug fix.

--- a/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
+++ b/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
@@ -31,29 +31,29 @@
                   <div class="clearfix">
                       <div class="left margin-right10">
                         <fieldset class="booking-types-fieldset">
-                            <legend class="searchbox-border">1. Booking Types</legend>
+                            <legend class="searchbox-border">Booking Types</legend>
                             <div>
-                                <label class="labelCompact">2. Urgent</label>
+                                <label class="labelCompact">1. Urgent</label>
                                 <div class ="left"> &lt; 30min</div>
                             </div> 
                             <div>
-                                <label class="labelCompact">3. Immediate</label>
+                                <label class="labelCompact">2. Immediate</label>
                                 <div class ="left"> 30min - 1Hr</div>
                             </div> 
                             <div>
-                                <label class="labelCompact">4. Regular</label>
+                                <label class="labelCompact">3. Regular</label>
                                 <div class ="left"> 1Hr - 3Hr</div>
                             </div> 
                             <div>
-                                <label class="labelCompact">5. Sufficient</label>
+                                <label class="labelCompact">4. Sufficient</label>
                                 <div class ="left"> 3Hr - 6Hr</div>
                             </div>
                             <div>
-                                <label class="labelCompact">6. Advance-Current</label>
+                                <label class="labelCompact">5. Advance-Current</label>
                                 <div class ="left"> 6Hr - 24Hr</div>
                             </div> 
                             <div>
-                                <label class="labelCompact">7. Advance</label>
+                                <label class="labelCompact">6. Advance</label>
                                 <div class ="left">Next Day</div>
                             </div> 
                         </fieldset>
