--- a/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
+++ b/sigmaCabs/app/views/bookings/statistics/bookingStatistics.html
@@ -1,5 +1,5 @@
 <fieldset class="" style="width:362px;margin-left: 6px;" ng-controller="bookingStatisticsController">
-    <legend class="searchbox-border">Statistics</legend>
+    <legend class="searchbox-border">{{selStatisticHour}} Statistics</legend>
     <div style="height:160px;" id="customerBookingGridID" class="bookingHistoryGrid">
     	<div class="gridStyle" ng-grid="gridStatisticsData" style="height:100%;margin:0px;background-color:transparent;"></div>
     </div>
@@ -11,9 +11,9 @@
                 Select Hours<span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="javascript:void(0);" data-ng-click="">1 Hour</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="">2 Hours</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="">3 Hours</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnShowStatistics(1);">1 Hour</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnShowStatistics(2);">2 Hours</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnShowStatistics(3);">3 Hours</a></li>
                 </ul>
             </div>
 	    </div>
