--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -41,7 +41,7 @@
             <button class="btnCompact btn-success" data-ng-click="fnVehicleBreakStop()">Break Stop</button>
             <button class="btnCompact btn-success" data-ng-click="fnVehicleLogout()">Logout</button> -->
             <button class="btnCompact btn-success" data-ng-click="fnVehicleConfirm()">Accepted</button>
-            <button class="btnCompact btn-danger" data-ng-click="fnVehicleReject()">Rejected</button>
+            <button class="btnCompact btn-danger" data-ng-click="fnVehicleRejectBooking()">Rejected</button>
         </div>
         <p class="clear"/>
     </div>
