--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -38,6 +38,8 @@
                 Add Request <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
+                    <li><a href="javascript:void(0);" data-ng-click="fnOpenDisposition()" title="Open Disposition. For:- Enquiry, Follow-up, Rejection.">Disposition</a></li>
+                    <li class="divider"></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehiclePhone()">Change Primary No.</a></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">Change Location.</a></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">Vehcile Status Change</a></li>
