Added vehicle availability API

--- a/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
+++ b/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
@@ -85,8 +85,8 @@
                   <fieldset style="height: 335px;">
                     <legend class="searchbox-border">Status</legend>
                     <div style="margin-top:130px;">
-                      <div style="width:70px;height: 30px;margin: 0px 10px 10px 10px; background:orange;"></div>
-                      <div style="margin: 0px 10px 10px 10px;text-align: center;font-weight: bold;">Not-OK</div>
+                      <div ng-style="sColor" style="width:70px;height: 30px;margin: 0px 10px 10px 10px;"></div>
+                      <div style="margin: 0px 10px 10px 10px;text-align: center;font-weight: bold;">{{ sState }}</div>
                     </div>
                   </fieldset>
                  </div>
