Added mainBookingHistory details page in callTaker

--- a/sigmaCabs/app/views/booking.html
+++ b/sigmaCabs/app/views/booking.html
@@ -67,9 +67,7 @@
     		Vehicle Availability
     </div>
 
-    <div ng-class= "bookingHistoryContainer" ng-show = "showBookingHistory">
-    		Booking History
-    </div>
+    <div ng-show = "showBookingHistoryDetails" ng-class= "bookingHistoryContainer"  data-ng-include="mainBookingHistory"></div>
 
     <div ng-class= "myCallHistoryContainer" ng-show = "showMyCallHistory">
     		Call History
