--- a/sigmaCabs/app/views/booking.html
+++ b/sigmaCabs/app/views/booking.html
@@ -67,7 +67,9 @@
     		Vehicle Availability
     </div>
 
-    <div ng-show = "showBookingHistoryDetails" ng-class= "bookingHistoryContainer"  data-ng-include="mainBookingHistory"></div>
+    <div ng-class= "bookingHistoryContainer" ng-show = "showBookingHistory">
+    		Booking History
+    </div>
 
     <div ng-class= "myCallHistoryContainer" ng-show = "showMyCallHistory">
     		Call History
