--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -13,7 +13,7 @@
         </div>
         <div class="fieldContainer relative clearBoth">
             <label class="labelCompact">Vehicle Ph.</label>
-            <input type="text" ng-model="vehicleMainDetials.details.registeredMobile" class="left validate[required,maxSize[128]] textFieldCompact" readonly phone />
+            <input type="text" ng-model="vehicleMainDetials.mobileNumber" class="left validate[required,maxSize[128]] textFieldCompact" readonly phone />
             <input name="" checked class="left smsCheckbox" type="checkbox" checked disabled>
         </div>
         <div class="fieldContainer clearBoth relative">
@@ -23,7 +23,7 @@
         </div>
         <div class="fieldContainer clearBoth relative">
             <label class="labelCompact">Current Place</label>
-            <input type="text" ng-model="vehicleMainDetials.details.location" class="left validate[required,maxSize[128]] textFieldCompact" />
+            <input type="text" ng-model="vehicleMainDetials.location" class="left validate[required,maxSize[128]] textFieldCompact" />
         </div>
         <div class="fieldContainer clearBoth relative" >
             <label class="labelCompact">Driver Name</label>
