--- a/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
+++ b/sigmaCabs/app/views/bookings/checkVehicleAvilabilty.html
@@ -86,7 +86,7 @@
                     <legend class="searchbox-border">Status</legend>
                     <div style="margin-top:130px;">
                       <div ng-style="sColor" style="width:70px;height: 30px;margin: 0px 10px 10px 10px;"></div>
-                      <div style="margin: 0px 10px 10px 10px;text-align: center;font-weight: bold;">{{ sState }}</div>
+                      <div style="width: 70px; margin: 0px 10px 10px 10px;text-align: center;font-weight: bold;">{{ sState }}</div>
                     </div>
                   </fieldset>
                  </div>
